// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<CurrentPhase /> render: section role - action 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Action
    </h1>
  </div>
  <div
    class="content single"
  >
    <article
      aria-label="player Move card"
      class="card active actionCard player"
    >
      <span
        class="heading"
      >
        <span
          class="icon"
        />
        <span
          class="title title"
        >
          Move
        </span>
      </span>
      <span
        class="content"
      >
        <span
          class="text paragraph"
        >
          <span
            class="paragraph"
          >
            Move up to two different troops
          </span>
        </span>
        <span
          class="waterMark"
        />
      </span>
    </article>
    <button
      class="button phaseButton disabled"
      disabled=""
    >
      Skip
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Planning
    </h1>
  </div>
  <div
    class="content"
  >
    <article
      aria-label="empty next slot"
      class="card silhouette"
    >
      <span
        class="heading"
      >
        <span
          class="title title"
        >
          next
        </span>
      </span>
      <span
        class="content"
      />
    </article>
    <article
      aria-label="empty future slot"
      class="card silhouette"
    >
      <span
        class="heading"
      >
        <span
          class="title title"
        >
          future
        </span>
      </span>
      <span
        class="content"
      />
    </article>
    <button
      class="button phaseButton disabled player"
      disabled=""
    >
      Confirm plan
    </button>
  </div>
</section>
`;

exports[`<CurrentPhase /> render: section role - planification with cards 1`] = `
<section
  aria-label="current phase"
  class="currentPhase"
  role="region"
>
  <div
    class="heading"
  >
    <span
      aria-label="player's turn"
      class="turn player"
      role="img"
    />
    <h1>
      Planning
    </h1>
  </div>
  <div
    class="content"
  >
    <button
      aria-disabled="false"
      aria-label="player Move card"
      aria-pressed="false"
      class="card available actionCard player"
      type="button"
    >
      <span
        class="heading"
      >
        <span
          class="icon"
        />
        <span
          class="title title"
        >
          Move
        </span>
      </span>
      <span
        class="content"
      >
        <span
          class="text paragraph"
        >
          <span
            class="paragraph"
          >
            Move up to two different troops
          </span>
        </span>
        <span
          class="waterMark"
        />
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-label="player Recruit card"
      aria-pressed="false"
      class="card available actionCard player"
      type="button"
    >
      <span
        class="heading"
      >
        <span
          class="icon"
        />
        <span
          class="title title"
        >
          Recruit
        </span>
      </span>
      <span
        class="content"
      >
        <span
          class="text paragraph"
        >
          <span
            class="paragraph"
          >
            Recruit troops on up to two different settlements
          </span>
        </span>
        <span
          class="waterMark"
        />
      </span>
    </button>
    <button
      class="button phaseButton player"
    >
      Confirm plan
    </button>
  </div>
</section>
`;
